--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <header id="header" class="fixed top-0 left-0 right-0 z-50 transition-all duration-300">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#">
-                <img src="https://imgs.search.brave.com/JepqmGybzGJDy7plzN0vZt-T93GC2_UF2LD1x8PgZ4E/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9sb2dv/ZGl4LmNvbS9sb2dv/LzIwNDM0NzMucG5n" alt="Logo UAM" class="h-10 w-auto">
+                <img src="img/LogoUAMBlanco.png?auto" alt="Logo UAM" class="h-10 w-auto">
             </a>
             <div class="hidden md:flex items-center space-x-8">
                 <a href="#about" class="hover:text-purple-400 transition-colors">Sobre Nosotros</a>
@@ -254,6 +254,7 @@
 
 </body>
 </html>
+
 
 
 
