--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <div class="p-6">
                             <h3 class="text-xl font-semibold text-white mb-2">Artículo sobre Inteligencia Artificial</h3>
                             <p class="text-gray-400 mb-4">Un análisis sobre el impacto de la IA en el desarrollo de software moderno y las tendencias futuras.</p>
-                            <a href="#" class="text-purple-400 font-medium hover:text-purple-300 transition-colors">Leer Artículo &rarr;</a>
+                            <a href="https://drive.google.com/file/d/1a8Pp75RffQ4l68zXXXvNRuS24SuMPRAY/view" target="_blank" rel="noopener noreferrer" class="text-purple-400 font-medium hover:text-purple-300 transition-colors">Leer artículo &rarr;</a>
                         </div>
                     </div>
                 </div>
@@ -254,6 +254,7 @@
 
 </body>
 </html>
+
 
 
 
