--- a/proyecto-areas-verdes.html
+++ b/proyecto-areas-verdes.html
@@ -57,11 +57,11 @@
             <h2 class="text-3xl font-bold text-white mb-6">Descripción General</h2>
             <div class="space-y-4 text-lg text-gray-300 leading-relaxed">
                 <p>
-                    El proyecto "Áreas Verdes" se enfocó en el mapeo, análisis y desarrollo de propuestas para la mejora de los espacios verdes dentro de nuestra comunidad. El objetivo fue identificar áreas subutilizadas o en mal estado para transformarlas en parques, jardines comunitarios y zonas de recreo que beneficien tanto al medio ambiente como a la salud de los residentes.
+                    Diseñar e implementar un sistema de riego autónomo para áreas verdes que optimice el consumo de agua mediante la automatización basada en parámetros de humedad, temperatura y calidad del suelo.
                 </p>
-                <p>
+               <!-- <p>
                     Utilizando tecnología de Sistemas de Información Geográfica (SIG) y la participación ciudadana, creamos un inventario detallado y desarrollamos planes de diseño sostenible para promover la biodiversidad y el bienestar social.
-                </p>
+                </p> -->
             </div>
         </section>
 
@@ -105,3 +105,4 @@
 
 </body>
 </html>
+
