--- a/proyecto-areas-verdes.html
+++ b/proyecto-areas-verdes.html
@@ -26,7 +26,7 @@
     <header class="bg-gray-900/80 backdrop-blur-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html">
-                <img src="https://www.uam.mx/images/logo-uam-blanco-01.svg" alt="Logo UAM" class="h-10 w-auto">
+                <img src="img/LogoUAMBlanco.png" alt="Logo UAM" class="h-10 w-auto">
             </a>
             <a href="index.html" class="bg-purple-600 text-white font-semibold py-2 px-5 rounded-full hover:bg-purple-700 transition-colors duration-300">
                 &larr; Volver al Portafolio
@@ -105,4 +105,5 @@
 
 </body>
 </html>
+
 
