--- a/proyecto-areas-verdes.html
+++ b/proyecto-areas-verdes.html
@@ -86,7 +86,8 @@
             <h2 class="text-3xl font-bold text-white mb-6">Detalles Técnicos y Conclusión</h2>
             <div class="space-y-4 text-lg text-gray-300 leading-relaxed">
                  <p>
-                    Para la recolección de datos se emplearon drones para fotogrametría y se realizaron encuestas a la comunidad. El procesamiento se llevó a cabo con el software QGIS para generar mapas de calor, análisis de proximidad y distribución de la vegetación.
+                    La implementación de un sistema de riego automatizado con monitoreo inteligente constituye un avance en la gestión sostenible de áreas verdes. El uso de microcontroladores, sensores y plataformas en la nube optimiza el consumo de agua, reduce costos operativos y mejora la salud de los ecosistemas. La integración con energías renovables y análisis de datos añade valor y se alinea con los Objetivos de Desarrollo Sostenible. Este tipo de sistemas resulta aplicable en entornos académicos, parques, zonas agrícolas y espacios urbanos, aportando a la preservación del agua y a la mitigación del impacto del cambio climático.
+
                 </p>
                 <p>
                     Como resultado, se entregó a las autoridades locales un plan maestro con propuestas concretas, incluyendo diseños de bajo mantenimiento con flora nativa y la creación de un mapa interactivo para el público. Este proyecto subraya el potencial de la tecnología y la colaboración comunitaria para crear ciudades más verdes y resilientes.
@@ -105,5 +106,6 @@
 
 </body>
 </html>
+
 
 
