--- a/proyecto-areas-verdes.html
+++ b/proyecto-areas-verdes.html
@@ -49,7 +49,7 @@
 
         <!-- Imagen Principal -->
         <section class="mb-16">
-            <img src="https://placehold.co/1200x600/166534/ffffff?text=Mapeo+de+Áreas+Verdes" alt="Mapeo de Áreas Verdes" class="w-full h-auto object-cover rounded-2xl shadow-lg shadow-purple-900/20">
+            <img src="img/Mapeo.png" alt="Mapeo de Áreas Verdes" class="w-full h-auto object-cover rounded-2xl shadow-lg shadow-purple-900/20">
         </section>
         
         <!-- Descripción y Objetivos -->
@@ -106,6 +106,7 @@
 
 </body>
 </html>
+
 
 
 
