--- a/proyecto-areas-verdes.html
+++ b/proyecto-areas-verdes.html
@@ -70,7 +70,7 @@
             <h2 class="text-3xl font-bold text-white text-center mb-8">Galería del Proceso</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="overflow-hidden rounded-xl">
-                    <img src="https://placehold.co/600x400/15803d/ffffff?text=Investigación+de+Campo" alt="Equipo realizando mediciones en el campo" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
+                    <img src="img/Pasto.jpg" alt="Equipo realizando mediciones en el campo" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
                 </div>
                 <div class="overflow-hidden rounded-xl">
                     <img src="https://placehold.co/600x400/16a34a/ffffff?text=Análisis+de+Datos+GIS" alt="Pantalla con software GIS mostrando mapas" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
@@ -106,6 +106,7 @@
 
 </body>
 </html>
+
 
 
 
