--- a/proyecto-areas-verdes.html
+++ b/proyecto-areas-verdes.html
@@ -73,10 +73,10 @@
                     <img src="img/Pasto.jpg" alt="Equipo realizando mediciones en el campo" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
                 </div>
                 <div class="overflow-hidden rounded-xl">
-                    <img src="https://placehold.co/600x400/16a34a/ffffff?text=Análisis+de+Datos+GIS" alt="Pantalla con software GIS mostrando mapas" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
+                    <img src="img/PCB.png" alt="Pantalla con software GIS mostrando mapas" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
                 </div>
                 <div class="overflow-hidden rounded-xl">
-                    <img src="https://placehold.co/600x400/22c55e/ffffff?text=Propuesta+de+Diseño" alt="Boceto de diseño de un nuevo parque" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
+                    <img src="img/Diagrama.png" alt="Boceto de diseño de un nuevo parque" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
                 </div>
             </div>
         </section>
@@ -106,6 +106,7 @@
 
 </body>
 </html>
+
 
 
 
