--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
                     <!-- Areas Verdes -->
                     <div class="bg-gray-800 rounded-xl overflow-hidden group transform hover:-translate-y-2 transition-all duration-300 fade-in-up" style="transition-delay: 200ms;">
-                        <img src="https://placehold.co/600x400/166534/ffffff?text=Áreas+Verdes" alt="Imagen del Proyecto Áreas Verdes" class="w-full h-56 object-cover group-hover:opacity-80 transition-opacity">
+                        <img src="img/Pasto.jpg" alt="Imagen del Proyecto Áreas Verdes" class="w-full h-56 object-cover group-hover:opacity-80 transition-opacity">
                         <div class="p-6">
                             <h3 class="text-xl font-semibold text-white mb-2">Áreas Verdes</h3>
                             <p class="text-gray-400 mb-4">Análisis y revitalización de espacios urbanos.</p>
@@ -254,6 +254,7 @@
 
 </body>
 </html>
+
 
 
 
