--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                     <!-- Presa Hidroelectrica -->
                     <div class="bg-gray-800 rounded-xl overflow-hidden group transform hover:-translate-y-2 transition-all duration-300 fade-in-up" style="transition-delay: 100ms;">
-                        <img src="https://placehold.co/600x400/4c1d95/ffffff?text=Presa+Hidroeléctrica" alt="Imagen del Proyecto Presa Hidroeléctrica" class="w-full h-56 object-cover group-hover:opacity-80 transition-opacity">
+                        <img src="img/PresaAng" alt="Imagen del Proyecto Presa Hidroeléctrica" class="w-full h-56 object-cover group-hover:opacity-80 transition-opacity">
                         <div class="p-6">
                             <h3 class="text-xl font-semibold text-white mb-2">Presa Hidroeléctrica</h3>
                             <p class="text-gray-400 mb-4">Simulación a escala de una presa real.</p>
@@ -254,6 +254,7 @@
 
 </body>
 </html>
+
 
 
 
