--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     </div>
                     <!-- Artículo IA -->
                     <div class="bg-gray-800 rounded-xl overflow-hidden group transform hover:-translate-y-2 transition-all duration-300 fade-in-up" style="transition-delay: 400ms;">
-                        <img src=img/Huawei.jpg" alt="Imagen del Artículo sobre IA" class="w-full h-56 object-cover group-hover:opacity-80 transition-opacity">
+                        <img src="img/Huawei.jpg" alt="Imagen del Artículo sobre IA" class="w-full h-56 object-cover group-hover:opacity-80 transition-opacity">
                         <div class="p-6">
                             <h3 class="text-xl font-semibold text-white mb-2">Artículo sobre Inteligencia Artificial</h3>
                             <p class="text-gray-400 mb-4">Un análisis sobre el impacto de la IA en el desarrollo de software moderno y las tendencias futuras.</p>
@@ -254,6 +254,7 @@
 
 </body>
 </html>
+
 
 
 
