--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </div>
                     <!-- Salud Mental -->
                     <div class="bg-gray-800 rounded-xl overflow-hidden group transform hover:-translate-y-2 transition-all duration-300 fade-in-up" style="transition-delay: 300ms;">
-                        <img src="https://placehold.co/600x400/0e7490/ffffff?text=Salud+Mental" alt="Imagen del Proyecto Salud Mental" class="w-full h-56 object-cover group-hover:opacity-80 transition-opacity">
+                        <img src="img/LogoApp.png" alt="Imagen del Proyecto Salud Mental" class="w-full h-56 object-cover group-hover:opacity-80 transition-opacity">
                         <div class="p-6">
                             <h3 class="text-xl font-semibold text-white mb-2">Salud Mental</h3>
                             <p class="text-gray-400 mb-4">App de apoyo para el bienestar estudiantil.</p>
@@ -159,7 +159,7 @@
                         <img src="img/Huawei.jpg" alt="Imagen del Artículo sobre IA" class="w-full h-56 object-cover group-hover:opacity-80 transition-opacity">
                         <div class="p-6">
                             <h3 class="text-xl font-semibold text-white mb-2">Artículo sobre Inteligencia Artificial</h3>
-                            <p class="text-gray-400 mb-4">Un análisis sobre el impacto de la IA en el desarrollo de software moderno y las tendencias futuras.</p>
+                            <p class="text-gray-400 mb-4">Huawei ICT brinda un contexto real donde los estudiantes aplican agentes de IA en escenarios prácticos, como la gestión en la nube.</p>
                             <a href="https://drive.google.com/file/d/1a8Pp75RffQ4l68zXXXvNRuS24SuMPRAY/view" target="_blank" rel="noopener noreferrer" class="text-purple-400 font-medium hover:text-purple-300 transition-colors">Leer artículo &rarr;</a>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                 <div class="max-w-3xl mx-auto text-center fade-in-up">
                     <h2 class="text-3xl md:text-4xl font-bold text-white mb-4">Contáctanos</h2>
                     <p class="text-lg text-gray-400 mb-10">¿Te gustaria colaborar con nostros? Me encantaría saber de ti. ¡Hablemos!</p>
-                    <a href="mailto:tuemail@ejemplo.com" class="bg-purple-600 text-white font-semibold py-3 px-8 rounded-full hover:bg-purple-700 transition-transform transform hover:scale-105 duration-300 ease-in-out inline-block">
+                    <a href="alamsamaniego@ieee.org" class="bg-purple-600 text-white font-semibold py-3 px-8 rounded-full hover:bg-purple-700 transition-transform transform hover:scale-105 duration-300 ease-in-out inline-block">
                         Enviar un Correo
                     </a>
                 </div>
@@ -196,7 +196,7 @@
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12.019c0 4.435 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.031-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.203 2.398.1 2.651.64.7 1.03 1.595 1.03 2.688 0 3.848-2.338 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.001 10.001 0 0022 12.019C22 6.477 17.523 2 12 2z" clip-rule="evenodd" /></svg>
                 </a>
             </div>
-            <p>&copy; 2024 UAM Student Branch. Todos los derechos reservados.</p>
+            <p>&copy; 2025 UAM Student Branch. Todos los derechos reservados.</p>
         </div>
     </footer>
 
@@ -254,6 +254,7 @@
 
 </body>
 </html>
+
 
 
 
