--- a/proyecto-salud-mental.html
+++ b/proyecto-salud-mental.html
@@ -26,7 +26,7 @@
     <header class="bg-gray-900/80 backdrop-blur-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html">
-                <img src="https://www.uam.mx/images/logo-uam-blanco-01.svg" alt="Logo UAM" class="h-10 w-auto">
+                <img src="img/LogoUAMBlanco.png" alt="Logo UAM" class="h-10 w-auto">
             </a>
             <a href="index.html" class="bg-purple-600 text-white font-semibold py-2 px-5 rounded-full hover:bg-purple-700 transition-colors duration-300">
                 &larr; Volver al Portafolio
@@ -49,7 +49,7 @@
 
         <!-- Imagen Principal -->
         <section class="mb-16">
-            <img src="https://placehold.co/1200x600/0e7490/ffffff?text=App+de+Salud+Mental" alt="Interfaz de la aplicación de salud mental" class="w-full h-auto object-cover rounded-2xl shadow-lg shadow-purple-900/20">
+            <img src="img/miuam.png" alt="Interfaz de la aplicación de salud mental" class="w-full h-auto object-cover rounded-2xl shadow-lg shadow-purple-900/20">
         </section>
         
         <!-- Descripción y Objetivos -->
@@ -70,10 +70,10 @@
             <h2 class="text-3xl font-bold text-white text-center mb-8">Galería del Desarrollo</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="overflow-hidden rounded-xl">
-                    <img src="https://placehold.co/600x400/0891b2/ffffff?text=Diseño+UI/UX" alt="Prototipos de la interfaz de usuario" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
+                    <img src="img/ux.png" alt="Prototipos de la interfaz de usuario" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
                 </div>
                 <div class="overflow-hidden rounded-xl">
-                    <img src="https://placehold.co/600x400/06b6d4/ffffff?text=Desarrollo+Móvil" alt="Código de la aplicación móvil" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
+                    <img src="movil.png" alt="Código de la aplicación móvil" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
                 </div>
                 <div class="overflow-hidden rounded-xl">
                     <img src="https://placehold.co/600x400/22d3ee/ffffff?text=Pruebas+con+Alumnos" alt="Grupo de alumnos probando la aplicación" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
@@ -86,10 +86,10 @@
             <h2 class="text-3xl font-bold text-white mb-6">Detalles Técnicos y Conclusión</h2>
             <div class="space-y-4 text-lg text-gray-300 leading-relaxed">
                  <p>
-                    La aplicación fue desarrollada de forma nativa para iOS y Android utilizando React Native, lo que permitió agilizar el desarrollo. Para el backend y la gestión de datos en tiempo real, se utilizó Firebase de Google, garantizando la seguridad y escalabilidad del chat y los perfiles de usuario.
+                    La aplicación fue desarrollada de forma nativa para Android utilizando React Native, lo que permitió agilizar el desarrollo. Para el backend y la gestión de datos en tiempo real, se utilizó Firebase de Google, garantizando la seguridad y escalabilidad del chat y los perfiles de usuario.
                 </p>
                 <p>
-                    El lanzamiento de la aplicación ha tenido una recepción positiva, convirtiéndose en un recurso valioso para los estudiantes. El proyecto demuestra el poder de la tecnología para crear soluciones que impactan directamente en el bienestar de la comunidad universitaria, ofreciendo un apoyo fundamental en un área tan importante como la salud mental.
+                    El lanzamiento de la aplicación se hará proximamente, convirtiéndose en un recurso valioso para los estudiantes. El proyecto demuestra el poder de la tecnología para crear soluciones que impactan directamente en el bienestar de la comunidad universitaria, ofreciendo un apoyo fundamental en un área tan importante como la salud mental.
                 </p>
             </div>
         </section>
@@ -99,9 +99,10 @@
     <!-- ========== FOOTER ========== -->
     <footer class="bg-gray-950 mt-16 py-8">
         <div class="container mx-auto px-6 text-center text-gray-500">
-             <p>&copy; 2024 UAM Student Branch. Todos los derechos reservados.</p>
+             <p>&copy; 2025 UAM Student Branch. Todos los derechos reservados.</p>
         </div>
     </footer>
 
 </body>
 </html>
+
