--- a/proyecto-salud-mental.html
+++ b/proyecto-salud-mental.html
@@ -73,7 +73,7 @@
                     <img src="img/ux.png" alt="Prototipos de la interfaz de usuario" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
                 </div>
                 <div class="overflow-hidden rounded-xl">
-                    <img src="movil.png" alt="Código de la aplicación móvil" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
+                    <img src="moviL_1.png" alt="Código de la aplicación móvil" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
                 </div>
                 <div class="overflow-hidden rounded-xl">
                     <img src="https://placehold.co/600x400/22d3ee/ffffff?text=Pruebas+con+Alumnos" alt="Grupo de alumnos probando la aplicación" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300">
@@ -105,4 +105,5 @@
 
 </body>
 </html>
+
 
